--- a/frontend-ambulance/package.json
+++ b/frontend-ambulance/package.json
@@ -26,7 +26,8 @@
     "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
